<resources>
    <string name="app_name">Mapbox Android SDK TestApp</string>
    <string name="activity_map_fragment_suport">Support Map Fragment</string>
    <string name="activity_map_fragment">Map Fragment</string>
    <string name="activity_multimap">Multiple Maps on Screen</string>
    <string name="activity_add_bulk_markers">Add Markers In Bulk</string>
    <string name="activity_animated_marker">Animated Markers</string>
    <string name="activity_dynamic_marker">Dynamic Marker</string>
    <string name="activity_polyline">Polyline</string>
    <string name="activity_polygon">Polygon</string>
    <string name="activity_press_for_marker">Press Map For Marker</string>
    <string name="activity_view_marker">View Marker API</string>
    <string name="activity_add_remove_markers">Zoom function with SymbolLayer</string>
    <string name="activity_info_window">Standard InfoWindow</string>
    <string name="activity_infowindow_adapter">Custom InfoWindow</string>
    <string name="activity_dynamic_infowindow_adapter">Custom Dynamic InfoWindow</string>
    <string name="activity_camera_animation_types">Animation Types</string>
    <string name="activity_camera_zoom">Zoom Methods</string>
    <string name="activity_visible_coordinate_bounds">LatLngBounds Method</string>
    <string name="activity_camera_position">CameraPosition Method</string>
    <string name="activity_scroll_by">Scroll By Method</string>
    <string name="activity_double_map">Double Map Activity</string>
    <string name="activity_snapshot">Snapshot Activity</string>
    <string name="activity_user_tracking_mode">User tracking mode</string>
    <string name="activity_user_tracking_customization">User location drawable</string>
    <string name="activity_user_dot_color">User location tint color</string>
    <string name="activity_user_location_toggle">User location toggle</string>
    <string name="activity_custom_location_engine">Custom location engine</string>
    <string name="activity_custom_layer">Custom Layer</string>
    <string name="activity_map_padding">Map Padding</string>
    <string name="activity_debug_mode">Debug Mode</string>
    <string name="activity_offline">Offline Map</string>
    <string name="activity_update_metadata">Update metadata Map</string>
    <string name="activity_offline_region_delete">Delete region</string>
    <string name="activity_minmax_zoom">Min/Max Zoom</string>
    <string name="activity_viewpager">ViewPager</string>
    <string name="activity_runtime_style">Runtime Style</string>
    <string name="activity_data_driven_style">Data Driven Style</string>
    <string name="activity_circle_layer">Circle layer</string>
    <string name="activity_style_file">Local Style file</string>
    <string name="activity_geojson_clustering">GeoJson Clustering</string>
    <string name="activity_geojson_realtime">Add live realtime data</string>
    <string name="activity_print">Print a map</string>
    <string name="activity_query_rendered_feature_properties">Query feature properties</string>
    <string name="activity_query_rendered_features_box_count">Count features in box</string>
    <string name="activity_query_rendered_features_box_symbol_count">Count symbols in box</string>
    <string name="activity_query_rendered_features_box_highlight">Highlight features in box</string>
    <string name="activity_query_source_features">Query source features</string>
    <string name="activity_symbol_layer">Symbols</string>
    <string name="activity_add_sprite">Add Custom Sprite</string>
    <string name="activity_navigation_drawer">Android SDK View integration</string>
    <string name="activity_simple_map">Simple Map</string>
    <string name="activity_map_change">Map Change Events</string>
    <string name="activity_map_visibility">Visibility Map</string>
    <string name="activity_map_in_dialog">Dialog with map</string>
    <string name="activity_marker_view_rectangle">Marker views in rectangle</string>
    <string name="activity_url_transform">Url transform</string>
    <string name="activity_restricted_bounds">Restrict camera to a bounds</string>
    <string name="activity_fill_extrusion_layer">Fill extrusions</string>
    <string name="activity_building_fill_extrusion_layer">Building layer</string>
    <string name="activity_animated_image_source">Animated Image Source</string>
    <string name="activity_bottom_sheet">Bottom sheet</string>
    <string name="activity_map_snapshotter">Map Snapshotter</string>
    <string name="description_user_location_tracking">Tracks the location of the user</string>
    <string name="description_user_location_customization">Customize the location of the user</string>
    <string name="description_user_location_dot_color">Customize the user location color</string>
    <string name="description_user_location_toggle">Toggle location of the user on and off</string>
    <string name="description_custom_location_engine">Customize location engine</string>
    <string name="description_custom_layer">Overlay a custom native layer on the map</string>
    <string name="description_info_window_adapter">Learn how to create a custom InfoWindow</string>
    <string name="description_cameraposition">CameraPosition capabilities</string>
    <string name="description_map_fragment">Showcase MapFragment</string>
    <string name="description_map_fragment_support">Showcase SupportMapFragment</string>
    <string name="description_multimap">Activity with multiple maps on screen</string>
    <string name="description_press_for_marker">Add marker to map on long press</string>
    <string name="description_camera_zoom">Different types of zoom methods</string>
    <string name="description_minmax_zoom">Configure a max and min zoomlevel</string>
    <string name="description_info_window">Learn how to handle the InfoWindow</string>
    <string name="description_add_bulk_markers">Add Markers In Bulk to a Map</string>
    <string name="description_camera_animation_types">Showcase the different animation types</string>
    <string name="description_visible_bounds">Center the camera around a bounds</string>
    <string name="description_dynamic_marker">Update position and icon</string>
    <string name="description_map_padding">Map Padding example</string>
    <string name="description_debug_mode">Debug Mode</string>
    <string name="description_offline">Offline Map example</string>
    <string name="description_update_metadata">Update metadata example</string>
    <string name="description_offline_region_delete">Delete region example</string>
    <string name="description_animated_marker">Animate the position change of a marker</string>
    <string name="description_polyline">Add a polyline to a map</string>
    <string name="description_polygon">Add a polygon to a map</string>
    <string name="description_scroll_by">Scroll with pixels in x,y direction</string>
    <string name="description_snapshot">Example to make a snapshot of the map</string>
    <string name="description_doublemap">2 maps in a view hierarchy</string>
    <string name="description_view_marker">Use an Android SDK View as marker</string>
    <string name="description_dynamic_info_window_adapter">Learn how to create a dynamic custom InfoWindow</string>
    <string name="description_viewpager">Use SupportMapFragments in a ViewPager</string>
    <string name="description_runtime_style">Adopt the map style on the fly</string>
    <string name="description_data_driven_style">Use functions to change the map appearance</string>
    <string name="description_symbol_layer">Manipulate symbols at runtime</string>
    <string name="description_custom_sprite">Use a custom sprite in a Symbol Layer</string>
    <string name="description_geojson_clustering">Use GeoJson sources and dynamic layers to cluster information</string>
    <string name="description_geojson_realtime">Use realtime GeoJSON data streams to move a symbol on your map</string>
    <string name="description_print">Shows how to print a map</string>
    <string name="description_navigation_drawer">Test animation of Android SDK View components</string>
    <string name="description_query_rendered_feature_properties_point">Query rendered feature properties on click</string>
    <string name="description_query_rendered_features_box_count">Count all rendered features in box</string>
    <string name="description_query_rendered_features_box_symbol_count">Count all rendered symbols in box</string>
    <string name="description_query_rendered_features_box_highlight">Hightligh buildings in box</string>
    <string name="description_query_source_features">Query source for features</string>
    <string name="description_simple_map">Shows a simple map</string>
    <string name="description_map_change">Logs map change events to Logcat</string>
    <string name="description_visibility_map">Changes visibility of map and view parent</string>
    <string name="description_add_remove_markers">Change Symbol icon when zoom levels changes</string>
    <string name="description_style_file">Use a local file as the style</string>
    <string name="description_map_in_dialog">Display a map inside a dialog fragment</string>
    <string name="description_marker_view_rectangle">Marker Views within a rectangle</string>
    <string name="description_circle_layer">Show bus stops and route in Singapore</string>
    <string name="description_url_transform">Transform urls on the fly</string>
    <string name="description_restricted_bounds">Limit viewport to Iceland</string>
    <string name="description_fill_extrusion_layer">Shows how to add 3D extruded shapes</string>
    <string name="description_building_fill_extrusion_layer">Shows how to show 3D extruded buildings</string>
    <string name="description_animated_image_source">Shows how to animate georeferenced images</string>
    <string name="description_bottom_sheet">Show 2 MapView on screen with a bottom sheet</string>
    <string name="description_map_snapshotter">Show a static bitmap taken with the MapSnapshotter</string>
    <string name="category">category</string>
    <string name="category_basic">_Basic</string>
    <string name="category_annotation">Annotation</string>
    <string name="category_camera">Camera</string>
    <string name="category_custom_layer">Custom Layer</string>
    <string name="category_fragment">Fragment</string>
    <string name="category_imagegenerator">Image Generator</string>
    <string name="category_infowindow">Info Window</string>
    <string name="category_maplayout">Map Layout</string>
    <string name="category_offline">Offline</string>
    <string name="category_userlocation">User Location</string>
    <string name="category_style">Styling</string>
    <string name="category_features">Features</string>
    <string name="action_remove_polylines">Remove polylines</string>
    <string name="action_visibility_polygon">Change visibility</string>
    <string name="action_alpha_polygon">Change alpha</string>
    <string name="action_points_polygon">Change points</string>
    <string name="action_color_polygon">Change color</string>
    <string name="action_holes_polygon">Change holes</string>
    <string name="action_width_polyline">Change width</string>
    <string name="menuitem_title_tracking_mode_dismiss_on_gesture">Dismiss location tracking on gesture</string>
    <string name="menuitem_title_bearing_mode_dismiss_on_gesture">Dismiss bearing tracking on gesture</string>
    <string name="menuitem_title_rotate_gesture_enabled">Enable rotate gestures</string>
    <string name="menuitem_title_scroll_gesture_enabled">Enable scroll gestures</string>
    <string name="button_camera_move">Move</string>
    <string name="button_camera_ease">Ease</string>
    <string name="button_camera_animate">Animate</string>
    <string name="button_user_dot_default">Default</string>
    <string name="button_user_dot_tint">Tint dot</string>
    <string name="button_user_accuracy_ring_tint">Tint ring</string>
</resources>