<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_id_alpha"
        android:title="@string/action_alpha_polygon"
        mapbox:showAsAction="never" />
    <item
        android:id="@+id/action_id_visible"
        android:title="@string/action_visibility_polygon"
        mapbox:showAsAction="never" />
    <item
        android:id="@+id/action_id_points"
        android:title="@string/action_points_polygon"
        mapbox:showAsAction="never" />
    <item
        android:id="@+id/action_id_color"
        android:title="@string/action_color_polygon"
        mapbox:showAsAction="never" />
    <item
        android:id="@+id/action_id_holes"
        android:title="@string/action_holes_polygon"
        mapbox:showAsAction="never" />
</menu>
