<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/action_toggle_dismissible_location"
            android:checkable="true"
            android:checked="false"
            android:title="@string/menuitem_title_tracking_mode_dismiss_on_gesture"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_toggle_dismissible_bearing"
            android:checkable="true"
            android:checked="false"
            android:title="@string/menuitem_title_bearing_mode_dismiss_on_gesture"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_toggle_rotate_gesture_enabled"
            android:checkable="true"
            android:checked="false"
            android:title="@string/menuitem_title_rotate_gesture_enabled"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_toggle_scroll_gesture_enabled"
            android:checkable="true"
            android:checked="false"
            android:title="@string/menuitem_title_scroll_gesture_enabled"
            app:showAsAction="never" />
    </group>

</menu>
