<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.mapbox.mapboxsdk.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar" />

    <Button
        android:id="@+id/cameraMoveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/white"
        android:text="@string/button_camera_move" />

    <Button
        android:id="@+id/cameraEaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cameraMoveButton"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:text="@string/button_camera_ease" />

    <Button
        android:id="@+id/cameraAnimateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cameraEaseButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@color/white"
        android:text="@string/button_camera_animate" />

</RelativeLayout>
