<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:mapbox_myLocationTintColor="@color/primary"
        app:mapbox_myLocationAccuracyTintColor="@color/primary"
        app:mapbox_styleUrl="@string/mapbox_style_mapbox_streets"
        app:mapbox_cameraTargetLat="38.913258"
        app:mapbox_cameraTargetLng="-77.032620"
        app:mapbox_cameraZoom="15"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/cameraMoveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_camera_move"/>

        <Button
            android:id="@+id/cameraEaseButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_camera_ease"/>

        <Button
            android:id="@+id/cameraAnimateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_camera_animate"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/locationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>
</RelativeLayout>
